--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
 <section class="trust-badges">
   <div class="container">
     <h4 class="trust-heading">Your Security is Our Priority</h4>
-    <div class="badges-grid">
+    <div class="badges-row">
 
       <!-- SSL Secure Badge -->
       <div class="badge">
