--- a/banking.html
+++ b/banking.html
@@ -279,8 +279,7 @@
             <div class="statistics-style2-area-shape1">
                 
             </div>
-            <div class="statistics-style2-area-bg"
-                style="background-image: url(assets/images/backgrounds/statistics-style2-area-bg.jpg);"></div>
+            <div class="statistics-style2-area-bg"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-lg-8">
