--- a/fluc3xh747bchc747jfjfuh-stacy-garner-transfer-page.html
+++ b/fluc3xh747bchc747jfjfuh-stacy-garner-transfer-page.html
@@ -245,7 +245,7 @@
                   </tr>
                   <tr>
                     <td>Account Balance</td>
-                    <td>£1,812,560.00</td>
+                    <td style="font-weight:bold;" >£1,812,560.00</td>
                   </tr>
                   <tr>
                     <td>Address</td>
