--- a/ch54hk7i84ghh4v4-stacy-garner-transfer-page.html
+++ b/ch54hk7i84ghh4v4-stacy-garner-transfer-page.html
@@ -221,7 +221,7 @@
           <div class="single-sidebar-box-style1">
             <div class="sidebar-title">
               <div class="dot-box"></div>
-              <h3>Welcome Stacy Wilson</h3>
+              <h3>Welcome Stacy Garner</h3>
             </div>
             <div class="card-types-box">
               <table class="sender-info-table">
@@ -234,7 +234,7 @@
                 <tbody>
                   <tr>
                     <td>Sender's Name</td>
-                    <td>Stacy Wilson</td>
+                    <td>Stacy Garner</td>
                   </tr>
                   <tr>
                     <td># Number</td>
@@ -246,15 +246,15 @@
                   </tr>
                   <tr>
                     <td>Account Balance</td>
-                    <td style="font-weight:bold" >£1,500,300.48</td>
+                    <td style="font-weight:bold" >£1,812,560.00</td>
                   </tr>
                   <tr>
                     <td>Address</td>
-                    <td>14436 Elmrock Road</td>
+                    <td>525 Liberty Road</td>
                   </tr>
                   <tr>
                     <td>Country/State</td>
-                    <td>Nelsonville, Ohio 45764</td>
+                    <td>Gold Hill, NC 28071</td>
                   </tr>
                 </tbody>
               </table>
@@ -320,10 +320,10 @@
                                         <img src="assets/images/resources/logo-11.png" alt="">
                                     </a>
                                 </div>
-                                <h3>Stacy Wilson</h3>
+                                <h3>Stacy Garner</h3>
                                 <ul>
-                                    <li><i class="fas fa-road"></i> 14436 Elmrock Road,</li>
-                                    <li><i class="fas fa-road"></i>Nelsonville, Ohio 45764</li>
+                                    <li><i class="fas fa-road"></i> 525 Liberty Road,</li>
+                                    <li><i class="fas fa-road"></i>Gold Hill, NC 28071</li>
                                 </ul>
                                 <div class="btns-box">
                                     <a class="btn-one" href="index.html">
