--- a/itsotd63648jfifu47-wilson-stacy-account-open.html
+++ b/itsotd63648jfifu47-wilson-stacy-account-open.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Finbank HTML 5 Template " />
+    <meta name="description" content="account" />
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
@@ -222,7 +222,7 @@
                             <div class="single-sidebar-box-style1">
                                 <div class="sidebar-title">
                                     <div class="dot-box"></div>
-                                    <h3>Welcome Stacy Garner</h3>
+                                    <h3>Welcome Stacy Wilson</h3>
                                 </div>
                                 <div class="card-types-box">
                                     <div class="table-responsive">
@@ -242,12 +242,12 @@
   </thead>
   <tbody>
     <tr>
-      <td>07/01/2025</td>
-      <td>£1,812,560.00  </td>
+      <td>12/16/2024</td>
+      <td>£1,500,300.48 </td>
 	  <td></td>
       <td>Transfer from Joseph Wilson</td>
-      <td style="font-weight:bold;color:black;" >£1,812,560.00 </td>
-      <td style="font-weight:bold;color:black;" >£1,812,560.00 </td>
+      <td style="font-weight:bold;color:black;" >£1,500,300.48 </td>
+      <td style="font-weight:bold;color:black;" >£1,500,300.48 </td>
     </tr>
 <tr>
       <td>.</td>
@@ -280,7 +280,7 @@
       <td></td>
       <td></td>
       <td><div class="btns-box">
-                                    <a class="btn-one" href="fluc3xh747bchc747jfjfuh-stacy-garner-transfer-page.html">
+                                    <a class="btn-one" href="fluc3xh747bchc747jfjfuh-wilson-stacy-transfer-page.html">
                                         <span class="txt">Transfer</span>
                                     </a>
                                 </div></td>
@@ -312,10 +312,10 @@
                                         <img src="assets/images/resources/logo-1.png" alt="">
                                     </a>
                                 </div>
-                                <h3>Stacy Garner</h3>
+                                <h3>Stacy Wilson</h3>
                                 <ul>
-                                    <li><i class="fas fa-road"></i></span> 525 Liberty Road,</li>
-                                    <li><i class="fas fa-road"></i></span> Gold Hill, NC 28071</li>
+                                    <li><i class="fas fa-road"></i></span> 14436 Elmrock Road,</li>
+                                    <li><i class="fas fa-road"></i></span> Nelsonville, Ohio 45764</li>
                                 </ul>
                                 <div class="btns-box">
                                     <a class="btn-one" href="index.html">
