--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -32,7 +32,7 @@
 body, html {
   height: 100%;
   font-family: 'Poppins', sans-serif;
-  background: #ffe8c6; /* fallback */
+  background: orange; /* fallback */
 }
 
 .hero {
