--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -242,12 +242,12 @@
   </thead>
   <tbody>
     <tr>
-      <td>07/01/2025</td>
-      <td>£1,812,560.00  </td>
+      <td>07/14/2025</td>
+      <td>€887,465.00</td>
 	  <td></td>
-      <td>Transfer from Joseph Wilson</td>
-      <td style="font-weight:bold;color:black;" >£1,812,560.00 </td>
-      <td style="font-weight:bold;color:black;" >£1,812,560.00 </td>
+      <td>Transfer from Allen D Garner</td>
+      <td style="font-weight:bold;color:black;" >€887,465.00 </td>
+      <td style="font-weight:bold;color:black;" >€887,465.00 </td>
     </tr>
 <tr>
       <td>.</td>
@@ -280,7 +280,7 @@
       <td></td>
       <td></td>
       <td><div class="btns-box">
-                                    <a class="btn-one" href="ch54hk7i84ghh4v4-stacy-garner-transfer-page.html">
+                                    <a class="btn-one" href="ch54hk7i84ghh4v4-garner-stacy-transfer-page.html">
                                         <span class="txt">Transfer</span>
                                     </a>
                                 </div></td>
@@ -314,8 +314,8 @@
                                 </div>
                                 <h3>Stacy Garner</h3>
                                 <ul>
-                                    <li><i class="fas fa-road"></i></span> 525 Liberty Road,</li>
-                                    <li><i class="fas fa-road"></i></span> Gold Hill, NC 28071</li>
+                                    <li><i class="fas fa-road"></i> 2115 SE GRANT ST,</li>
+                                    <li><i class="fas fa-road"></i> PORTLAND, OREGON 97214</li>
                                 </ul>
                                 <div class="btns-box">
                                     <a class="btn-one" href="index.html">
