--- a/initiate-cjjgfhgfjgc5675gff3467-stacy-garner-process-page.html
+++ b/initiate-cjjgfhgfjgc5675gff3467-stacy-garner-process-page.html
@@ -460,8 +460,8 @@ body {
                                 </div>
                                 <h3>Stacy Garner</h3>
                                 <ul>
-                                    <li><i class="fas fa-road"></i> 525 Liberty Road,</li>
-                                    <li><i class="fas fa-road"></i>Gold Hill, NC 28071 </li>
+                                    <li><i class="fas fa-road"></i> 2115 SE GRANT ST,</li>
+                                    <li><i class="fas fa-road"></i> PORTLAND, OREGON 97214</li>
                                 </ul>
                                 <div class="btns-box">
                                     <a class="btn-one" href="index.html">
