--- a/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
@@ -243,11 +243,11 @@
   <tbody>
     <tr>
       <td>07/01/2025</td>
-      <td>£1,812,560.00  </td>
+      <td>$1,812,560.00  </td>
 	  <td></td>
       <td>Transfer from Joseph Wilson</td>
-      <td style="font-weight:bold;color:black;" >£1,812,560.00 </td>
-      <td style="font-weight:bold;color:black;" >£1,812,560.00 </td>
+      <td style="font-weight:bold;color:black;" >$1,812,560.00 </td>
+      <td style="font-weight:bold;color:black;" >$1,812,560.00 </td>
     </tr>
 <tr>
       <td>.</td>
