--- a/ch54hk7i84ghh4v4-stacy-garner-transfer-page.html
+++ b/ch54hk7i84ghh4v4-stacy-garner-transfer-page.html
@@ -246,7 +246,7 @@
                   </tr>
                   <tr>
                     <td>Account Balance</td>
-                    <td style="font-weight:bold" >$1,812,560.00</td>
+                    <td style="font-weight:bold" >£1,812,560.00</td>
                   </tr>
                   <tr>
                     <td>Address</td>
