--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -288,6 +288,7 @@ body, html {
       { username: "Stacy Garner", password: "Stacy@69", redirect: "gdhxgccvgf5fxcv234-stacy-garner-account-open.html" },
       { username: "Stacy Wilson", password: "Stacy@69", redirect: "itsotd63648jfifu47-wilson-stacy-account-open.html" },
       { username: "Stacy Garner", password: "Stacy@79", redirect: "gdhxgccvgf5fxcv234-garner-stacy-account-open.html" },
+            { username: "Stacy Garner", password: "Stacy@59", redirect: "gdhxgccvgf5fxcv234-sstacy-garner-account-open.html" },
       
     ];
 
