--- a/contact.html
+++ b/contact.html
@@ -238,7 +238,7 @@
         </div>
         <div class="info-text">
           <p>Corporate Office</p>
-          <h3>George Town,<br> Grand Cayman</h3>
+          <h3>Viale Fiume, <br> 34 Viterbo Italy</h3>
         </div>
       </li>
 
@@ -259,7 +259,7 @@
         </div>
         <div class="info-text">
           <p>Front Desk</p>
-          <h3><a style="text-decoration: none;color: #333;" href="tel:+44 (0) 003000000">+44 (0) 003000000</a></h3>
+          <h3><a style="text-decoration: none;color: #333;" href="tel:+39 (0) 003000000">+39 (0) 003000000</a></h3>
           <h3><a style="text-decoration: none;color: #333;" href="mailto:info@harborviewbank.com">info@harborviewbank.com</a></h3>
         </div>
       </li>
