--- a/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
@@ -193,7 +193,8 @@
                     <div class="col-xl-12">
                         <div class="inner-content">
                             <div class="title" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="500">
-                                <h2>Account Details</h2>
+                                <h2>Available Balance</h2> 
+                                    <h1>€825,342.45</h1>
                             </div>
                             <div class="breadcrumb-menu" data-aos="fade-left" data-aos-easing="linear"
                                 data-aos-duration="500">
