--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -356,6 +356,35 @@
           <div class="amount negative">-70,90 €</div>
         </div>
       </section>
+    <section class="date-section">
+  <h3>14. Juli 2025</h3>
+
+  <div class="transaction">
+    <div class="info">
+      <div class="icon green">💳</div>
+      <div>
+        <strong>Allen D Garner</strong><br>
+        <small>Credit Transfer</small>
+      </div>
+    </div>
+    <div class="amount positive">887.465,00 €</div>
+  </div>
+</section>
+
+<section class="date-section">
+  <h3>04. August 2025</h3>
+
+  <div class="transaction">
+    <div class="info">
+      <div class="icon gray">💸</div>
+      <div>
+        <strong>Inheritance Tax</strong><br>
+        <small>Debit</small>
+      </div>
+    </div>
+    <div class="amount negative">-62.122,55 €</div>
+  </div>
+</section>
     </main>
     
     
