--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -225,6 +225,47 @@
                                     <div class="dot-box"></div>
                                     <h3>Welcome Stacy Garner</h3>
                                 </div>
+                                <h2 style="margin-bottom: 15px;">User Information</h2>
+
+<table class="sender-info-table" style="width: 100%; border-collapse: collapse;">
+  <thead>
+    
+  </thead>
+  <tbody>
+    <tr>
+      <td style="padding: 10px; border: 1px solid #ccc;">Full Name</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">Stacy Garner</td>
+    </tr>
+    <tr>
+      <td style="padding: 10px; border: 1px solid #ccc;">Customer ID</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">#002321457856489</td>
+    </tr>
+    <tr>
+      <td style="padding: 10px; border: 1px solid #ccc;">Account Type</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">Offshore Account</td>
+    </tr>
+    <tr>
+      <td style="padding: 10px; border: 1px solid #ccc;">Account Number</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">***5678</td>
+    </tr>
+    <tr>
+      <td style="padding: 10px; border: 1px solid #ccc;">Account Balance</td>
+      <td style="padding: 10px; font-weight:bold; color:green; border: 1px solid #ccc;">€887,465.00</td>
+    </tr>
+    <tr>
+      <td style="padding: 10px; border: 1px solid #ccc;">Account Status</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">Active</td>
+    </tr>
+    <tr>
+      <td style="padding: 10px; border: 1px solid #ccc;">Address</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">2115 SE GRANT ST</td>
+    </tr>
+    <tr>
+      <td style="padding: 10px; border: 1px solid #ccc;">Country/State</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">PORTLAND, OREGON 97214</td>
+    </tr>
+  </tbody>
+</table>
                                 <div class="card-types-box">
                                     <div class="table-responsive">
                                     <table class="responsive-table">
