--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -193,6 +193,7 @@
                     <div class="col-xl-12">
                         <div class="inner-content">
                             <div class="title" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="500">
+                                 <h3>Welcome Stacy Garner</h3>
                                 <h2>Available Balance</h2> 
                                     <h1>€825,342.45</h1>
                             </div>
@@ -223,7 +224,7 @@
                             <div class="single-sidebar-box-style1">
                                 <div class="sidebar-title">
                                     <div class="dot-box"></div>
-                                    <h3>Welcome Stacy Garner</h3>
+                                   
                                 </div>
                                 <h2 style="margin-bottom: 15px;">User Information</h2>
 
@@ -266,6 +267,17 @@
     </tr>
   </tbody>
 </table>
+
+  <section class="account-actions" style="margin-top: 40px;">
+  <h2 style="margin-bottom: 20px;">Account Actions</h2>
+
+  <div style="display: flex; gap: 20px; flex-wrap: wrap;">
+    <!-- Transfer Button -->
+    <a class="btn-one" href="ch54hk7i84ghh4v4-garner-stacy-transfer-page.html" style="padding: 15px 30px; background-color: #007bff; color: white; border-radius: 6px; text-decoration: none; font-weight: bold;">
+      <span class="txt">Initiate Transfer</span>
+    </a> 
+</div>
+</section>
                                 <div class="card-types-box">
                                     <div class="table-responsive">
                                     <table class="responsive-table">
