--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -250,7 +250,7 @@
       <td style="padding: 10px; border: 1px solid #ccc;">***6489</td>
     </tr>
     <tr>
-      <td style="padding: 10px; border: 1px solid #ccc;">Account Balance</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">Current Balance</td>
       <td style="padding: 10px; font-weight:bold; color:green; border: 1px solid #ccc;">€825,342.45</td>
     </tr>
     <tr>
@@ -262,7 +262,7 @@
       <td style="padding: 10px; border: 1px solid #ccc;">2115 SE GRANT ST</td>
     </tr>
     <tr>
-      <td style="padding: 10px; border: 1px solid #ccc;">Country/State</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">City/State/Zip</td>
       <td style="padding: 10px; border: 1px solid #ccc;">PORTLAND, OREGON 97214</td>
     </tr>
   </tbody>
