--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -247,7 +247,7 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Number</td>
-      <td style="padding: 10px; border: 1px solid #ccc;">***6489</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">00***6489</td>
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Current Balance</td>
