--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -286,13 +286,13 @@
 
     <div class="transaction">
       <div class="info">
-        <div class="icon gray">💸</div>
+        <div class="icon gray"></div>
         <div>
           <strong>Inheritance Tax</strong><br>
           <small>Debit</small>
         </div>
       </div>
-      <div class="amount negative">-62.122,55 €</div>
+      <div class="amount negative">-62,122.55 €</div>
     </div>
   </section>
   <section class="date-section">
@@ -300,13 +300,13 @@
 
     <div class="transaction">
       <div class="info">
-        <div class="icon green">💳</div>
+        <div class="icon green"></div>
         <div>
-          <strong>Allen D Garner</strong><br>
-          <small>Credit Transfer</small>
+          <strong>From Allen D Garner </strong><br>
+          <small>Inheritance Claim</small>
         </div>
       </div>
-      <div class="amount positive">887.465,00 €</div>
+      <div class="amount positive">887,465.00 €</div>
     </div>
   </section>
 </section>
