--- a/ch54hk7i84ghh4v4-garner-stacy-transfer-page.html
+++ b/ch54hk7i84ghh4v4-garner-stacy-transfer-page.html
@@ -253,7 +253,7 @@
                     <td>2115 SE GRANT ST</td>
                   </tr>
                   <tr>
-                    <td>Country/State</td>
+                    <td>City/State/Zip</td>
                     <td>PORTLAND, OREGON 97214</td>
                   </tr>
                 </tbody>
