--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -201,7 +201,7 @@
                                 data-aos-duration="500">
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
-                                    <li class="active">Account # 002321457856489</li>
+                                    <li class="active">IBAN # IT62W0306932010000007626489</li>
                                 </ul>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Number</td>
-      <td style="padding: 10px; border: 1px solid #ccc;">00***6489</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">00******6489</td>
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Current Balance</td>
