--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -243,7 +243,7 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Type</td>
-      <td style="padding: 10px; border: 1px solid #ccc;">Offshore Account</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">Non Resident Current Account</td>
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Number</td>
