--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -405,11 +405,29 @@
                                     <li><i class="fas fa-road"></i> 2115 SE GRANT ST,</li>
                                     <li><i class="fas fa-road"></i> PORTLAND, OREGON 97214</li>
                                 </ul>
-                                <div class="btns-box">
-                                    <a class="btn-one" href="index.html">
-                                        <span class="txt">Logout</span>
-                                    </a>
-                                </div>
+                                <div style="
+  display: flex;
+  justify-content: flex-end;
+  padding: 15px 30px;
+  background-color: #f8f9fa;
+  border-bottom: 1px solid #ddd;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+">
+  <a href="index.html" style="
+    display: inline-block;
+    background-color: #dc3545;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: 600;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    transition: background-color 0.3s ease;
+  " onmouseover="this.style.backgroundColor='#c82333'"
+     onmouseout="this.style.backgroundColor='#dc3545'">
+    🔒 Logout
+  </a>
+</div>
                             </div>
 
                             
