--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -412,6 +412,7 @@
   background-color: #f8f9fa;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  box-radius: 3px;
 ">
   <a href="index.html" style="
     display: inline-block;
