--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -255,7 +255,7 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Status</td>
-      <td style="padding: 10px; border: 1px solid #ccc;">Active</td>
+      <td style="padding: 10px; border: 1px solid #ccc;"> Temporary On Hold</td>
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Address</td>
