--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -256,7 +256,7 @@
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Status</td>
       <td style="padding: 10px; border: 1px solid #ccc;color:#FFC107;"> Under Review <p style="margin-top: 10px; color: #555555; font-size: 14px;">
-    This process will take <strong>7 to 14 business days</strong>.
+    (approx. 7-10 business working days)</strong>.
   </p>  </td>
     </tr>
     <tr>
