--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -255,8 +255,8 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Status</td>
-      <td style="padding: 10px; border: 1px solid #ccc;color:#FFC107;"> Under Review <p style="margin-top: 10px; color: #555555; font-size: 14px;">
-    (approx. 7-10 business working days)</strong>.
+       <td style="padding: 10px; border: 1px solid #ccc;color:#FFC107;"> <span style=”font-weight:bold;” >Under Review </span> <p style="margin-top: 10px; color: #555555; font-size: 8px;">
+    (approx. 7-10 business days)</strong>.
   </p>  </td>
     </tr>
     <tr>
