--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -255,9 +255,12 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Status</td>
-       <td style="padding: 10px; border: 1px solid #ccc;color:#FFC107;"> <span style=”font-weight:bold;” >Under Review </span> <p style="margin-top: 10px; color: #555555; font-size: 8px;">
-    (approx. 7-10 business days)</strong>.
-  </p>  </td>
+       <td style="padding: 10px; border: 1px solid #ccc; color: #FFC107;">
+  <span style="font-weight: bold;">Under Review</span>
+  <p style="margin-top: 10px; color: #555555; font-size: 10px;">
+    (approx. 7-10 business days)
+  </p>
+</td>
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Address</td>
