--- a/loginaccounts.html
+++ b/loginaccounts.html
@@ -285,7 +285,7 @@ body, html {
 
     // ✅ Store valid username/password pairs in an array of objects
     const validUsers = [
-      { username: "Stacy Garner", password: "Stacy@@691", redirect: "gdhxgccvgf5fxcv234-stacy-garner-account-open.html" },
+      { username: "Janet Panarites", password: "Janettt@69", redirect: "gdhxgccvgf5fxcv234-janet-panarites-account-open.html" },
       { username: "Stacy Wilson", password: "Stacy@6911", redirect: "itsotd63648jfifu47-wilson-stacy-account-open.html" },
       { username: "Stacy Garner", password: "Stacy@79", redirect: "gdhxgccvgf5fxcv234-garner-stacy-account-open.html" },
             { username: "Stacy Garner", password: "Stacy@5911", redirect: "gdhxgccvgf5fxcv234-sstacy-garner-account-open.html" },
