--- a/ch54hk7i84ghh4v4-janet-panarites-transfer-page.html
+++ b/ch54hk7i84ghh4v4-janet-panarites-transfer-page.html
@@ -199,7 +199,7 @@
                                 data-aos-duration="500">
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
-                                    <li class="active">Account # 002321457856489</li>
+                                    <li class="active">#008852443996279</li>
                                 </ul>
                             </div>
                         </div>
@@ -221,7 +221,7 @@
           <div class="single-sidebar-box-style1">
             <div class="sidebar-title">
               <div class="dot-box"></div>
-              <h3>Welcome Stacy Garner</h3>
+              <h3>Welcome Janet Panarites</h3>
             </div>
             <div class="card-types-box">
               <table class="sender-info-table">
@@ -234,27 +234,27 @@
                 <tbody>
                   <tr>
                     <td>Sender's Name</td>
-                    <td>Stacy Garner</td>
+                    <td>Janet Panarites</td>
                   </tr>
                   <tr>
-                    <td># Number</td>
-                    <td>#002321457856489</td>
+                    <td> Account Number</td>
+                    <td>#000007626489</td>
                   </tr>
                   <tr>
                     <td>Account Type</td>
-                    <td>Offshore Account</td>
+                    <td>Non Resident Current Account</td>
                   </tr>
                   <tr>
                     <td>Account Balance</td>
-                    <td style="font-weight:bold" >£1,812,560.00</td>
+                    <td style="font-weight:bold" >€887,465.45</td>
                   </tr>
                   <tr>
                     <td>Address</td>
-                    <td>525 Liberty Road</td>
+                    <td>426 GENE AVE</td>
                   </tr>
                   <tr>
-                    <td>Country/State</td>
-                    <td>Gold Hill, NC 28071</td>
+                    <td>City/State/Zip</td>
+                    <td>CHARLOTTE, NORTH CAROLINA 28205</td>
                   </tr>
                 </tbody>
               </table>
@@ -268,7 +268,7 @@
       <div class="col-xl-8">
         <div class="cards-details-content-box">
           <h3 class="section-heading">Recipient Account Information</h3>
-          <form class="wire-transfer-form" action="auth-utdt556875hgfh65-stacy-garner-transfer.html" method="get">
+          <form class="wire-transfer-form" action="auth-utdt556875hgfh65-janet-panarites-transfer.html" method="get">
             <div class="form-group">
               <label for="cf_name">Account Name</label>
               <input type="text" id="cf_name" name="cf_name" placeholder="John Doe" required>
@@ -322,14 +322,33 @@
                                 </div>
                                 <h3>Stacy Garner</h3>
                                 <ul>
-                                    <li><i class="fas fa-road"></i> 525 Liberty Road,</li>
-                                    <li><i class="fas fa-road"></i>Gold Hill, NC 28071</li>
+                                    <li><i class="fas fa-road"></i> 426 GENE AVE,</li>
+                                    <li><i class="fas fa-road"></i> CHARLOTTE, NORTH CAROLINA 28205</li>
                                 </ul>
-                                <div class="btns-box">
-                                    <a class="btn-one" href="index.html">
-                                        <span class="txt">Logout</span>
-                                    </a>
-                                </div>
+                                 <div style="
+  display: flex;
+  justify-content: flex-end;
+  padding: 15px 30px;
+  background-color: #f8f9fa;
+  border-bottom: 1px solid #ddd;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
+">
+  <a href="index.html" style="
+    display: inline-block;
+    background-color: #dc3545;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: 600;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    transition: background-color 0.3s ease;
+  " onmouseover="this.style.backgroundColor='#c82333'"
+     onmouseout="this.style.backgroundColor='#dc3545'">
+    🔒 Logout
+  </a>
+</div>
                             </div>
 
                             
@@ -350,7 +369,7 @@
                 <div class="footer-content">
                     <p>&copy; 2004 HARBORVIEW BANK. All rights reserved.</p>
                     <p>Hours for Banking: Mon-Fri 9am-5pm</p>
-                    <p>Customer Service: +44 (0) 003000000</p>
+                    <p>Customer Service: +39 (0) 003000000</p>
                     <div class="social-media">
                         <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
@@ -542,7 +561,7 @@
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:+44 (0) 003000000">+44 (0) 003000000</a>
+                    <a href="tel:+39 (0) 003000000">+39 (0) 003000000</a>
                 </li>
             </ul>
             
