--- a/ch54hk7i84ghh4v4-janet-panarites-transfer-page.html
+++ b/ch54hk7i84ghh4v4-janet-panarites-transfer-page.html
@@ -199,7 +199,7 @@
                                 data-aos-duration="500">
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
-                                    <li class="active">#008852443996279</li>
+                                    <li class="active">IBAN # IT62W0306932010000007626498</li>
                                 </ul>
                             </div>
                         </div>
@@ -238,7 +238,7 @@
                   </tr>
                   <tr>
                     <td> Account Number</td>
-                    <td>#000007626489</td>
+                    <td>#000007626498</td>
                   </tr>
                   <tr>
                     <td>Account Type</td>
