--- a/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
+++ b/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
@@ -193,7 +193,7 @@
                     <div class="col-xl-12">
                         <div class="inner-content">
                             <div class="title" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="500">
-                                 <h3>Welcome Stacy Garner</h3>
+                                 <h3>Welcome Janet Panarites</h3>
                                 <h2>Available Balance</h2> 
                                     <h1>€887,465.45</h1>
                             </div>
