--- a/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
+++ b/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
@@ -251,7 +251,7 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Current Balance</td>
-      <td style="padding: 10px; font-weight:bold; color:gold; border: 1px solid #ccc;">€887,465.45</td>
+      <td style="padding: 10px; font-weight:bold; color:black; border: 1px solid #ccc;">€887,465.45</td>
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Status</td>
