--- a/ch54hk7i84ghh4v4-janet-panarites-transfer-page.html
+++ b/ch54hk7i84ghh4v4-janet-panarites-transfer-page.html
@@ -320,7 +320,7 @@
                                         <img src="assets/images/resources/logo-11.png" alt="">
                                     </a>
                                 </div>
-                                <h3>Stacy Garner</h3>
+                                <h3>Janet Panarites</h3>
                                 <ul>
                                     <li><i class="fas fa-road"></i> 426 GENE AVE,</li>
                                     <li><i class="fas fa-road"></i> CHARLOTTE, NORTH CAROLINA 28205</li>
