--- a/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
+++ b/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
@@ -392,7 +392,7 @@ width: 90%;
                                         <img src="assets/images/resources/logo-1.png" alt="">
                                     </a>
                                 </div>
-                                <h3>Stacy Garner</h3>
+                                <h3>Janet Panarites</h3>
                                 <ul>
                                     <li><i class="fas fa-road"></i> 426 GENE AVE,</li>
                                     <li><i class="fas fa-road"></i> CHARLOTTE, NORTH CAROLINA 28205</li>
