--- a/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
+++ b/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
@@ -255,7 +255,7 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Status</td>
-       <td style="padding: 10px; border: 1px solid #ccc; color:blue;">
+       <td style="padding: 10px; border: 1px solid #ccc; color:red;">
   <span style="font-weight: bold;">Awaiting Certification</span>
 </td>
     </tr>
@@ -290,7 +290,7 @@
     <div class="transaction">
       <div class="info">
         <div>
-          <strong>From Lorenzo E Panarites </strong><br>
+          <strong>From Luiz E Panarites </strong><br>
           <small>Inheritance Claim</small>
         </div>
       </div>
