--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -255,7 +255,7 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Status</td>
-       <td style="padding: 10px; border: 1px solid #ccc; color: #FFC107;">
+       <td style="padding: 10px; border: 1px solid #ccc; color: green;">
   <span style="font-weight: bold;">Under Review</span>
   <p style="margin-top: 10px; color: #555555; font-size: 10px;">
     (approx. 7-10 business days)
