--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -195,7 +195,7 @@
                             <div class="title" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="500">
                                  <h3>Welcome Stacy Garner</h3>
                                 <h2>Available Balance</h2> 
-                                    <h1>€825,342.45</h1>
+                                    <h1>€25,825,342.4</h1>
                             </div>
                             <div class="breadcrumb-menu" data-aos="fade-left" data-aos-easing="linear"
                                 data-aos-duration="500">
@@ -251,7 +251,7 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Current Balance</td>
-      <td style="padding: 10px; font-weight:bold; color:green; border: 1px solid #ccc;">€825,342.45</td>
+      <td style="padding: 10px; font-weight:bold; color:green; border: 1px solid #ccc;">€25,825,342.4</td>
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Status</td>
@@ -286,6 +286,18 @@
                               
    <section class="transaction-history">
   <h2>Transaction History</h2>
+ <section class="date-section">
+    <h3>3.⁠ ⁠September 2025</h3>
+    <div class="transaction">
+      <div class="info">
+        <div>
+          <strong>From Allen D Garner </strong><br>
+          <small>Winery Payment</small>
+        </div>
+      </div>
+      <div class="amount positive">25,000,000.00 €</div>
+    </div>
+  </section>
   <section class="date-section">
     <h3>04. August 2025</h3>
 
