--- a/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
+++ b/gdhxgccvgf5fxcv234-garner-stacy-account-open.html
@@ -258,7 +258,7 @@
        <td style="padding: 10px; border: 1px solid #ccc; color: green;">
   <span style="font-weight: bold;">Under Review</span>
   <p style="margin-top: 10px; color: #555555; font-size: 10px;">
-    (approx. 7-10 business days)
+    (On Hold)
   </p>
 </td>
     </tr>
