--- a/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
+++ b/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
@@ -195,7 +195,7 @@
                             <div class="title" data-aos="fade-right" data-aos-easing="linear" data-aos-duration="500">
                                  <h3>Welcome Janet Panarites</h3>
                                 <h2>Available Balance</h2> 
-                                    <h1>€887,465.45</h1>
+                                    <h1>€825,342.87</h1>
                             </div>
                             <div class="breadcrumb-menu" data-aos="fade-left" data-aos-easing="linear"
                                 data-aos-duration="500">
@@ -251,7 +251,7 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Current Balance</td>
-      <td style="padding: 10px; font-weight:bold; color:black; border: 1px solid #ccc;">€887,465.45</td>
+      <td style="padding: 10px; font-weight:bold; color:black; border: 1px solid #ccc;">€25,825,342.9</td>
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Status</td>
@@ -283,6 +283,32 @@
                               
    <section class="transaction-history">
   <h2>Transaction History</h2>
+<section class="date-section">
+    <h3>17.⁠ ⁠September 2025</h3>
+    <div class="transaction">
+      <div class="info">
+        <div>
+          <strong>From Allen D Garner </strong><br>
+          <small>Winery Payment</small><br>
+            <small>Incoming Wire</small>
+        </div>
+      </div>
+      <div class="amount positive">25,000,000.00 €</div>
+    </div>
+  </section>
+  <section class="date-section">
+    <h3>15.⁠ ⁠September 2025</h3>
+
+    <div class="transaction">
+      <div class="info">
+        <div>
+          <strong>Inheritance Tax</strong><br>
+          <small>Debit</small>
+        </div>
+      </div>
+      <div class="amount negative">-62,122.58 €</div>
+    </div>
+  </section>
   
   <section class="date-section">
     <h3>20. August 2025</h3>
