--- a/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
+++ b/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
@@ -288,7 +288,7 @@
     <div class="transaction">
       <div class="info">
         <div>
-          <strong>From Allen D Garner </strong><br>
+          <strong>From Luiz E Panarites </strong><br>
           <small>Winery Payment</small><br>
             <small>Incoming Wire</small>
         </div>
