--- a/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
+++ b/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
@@ -288,9 +288,8 @@
     <div class="transaction">
       <div class="info">
         <div>
-          <strong>From Luiz E Panarites </strong><br>
-          <small>Winery Payment</small><br>
-            <small>Incoming Wire</small>
+          <strong>Incoming Wire< </strong><br>
+          <small>Winery Payment</small>
         </div>
       </div>
       <div class="amount positive">25,000,000.00 €</div>
