--- a/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
+++ b/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
@@ -288,7 +288,7 @@
     <div class="transaction">
       <div class="info">
         <div>
-          <strong>Incoming Wire< </strong><br>
+          <strong>Incoming Wire</strong><br>
           <small>Winery Payment</small>
         </div>
       </div>
