--- a/ch54hk7i84ghh4v4-sstacy-garner-transfer-page.html
+++ b/ch54hk7i84ghh4v4-sstacy-garner-transfer-page.html
@@ -245,7 +245,7 @@
                   </tr>
                   <tr>
                     <td>Account Balance</td>
-                    <td style="font-weight:bold" >€25,825,342.45</td>
+                    <td style="font-weight:bold" >£1,812,560.00</td>
                   </tr>
                   <tr>
                     <td>Address</td>
