--- a/gdhxgccvgf5fxcv234-sstacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-sstacy-garner-account-open.html
@@ -250,7 +250,7 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Current Balance</td>
-      <td style="padding: 10px; font-weight:bold; color:green; border: 1px solid #ccc;">€1,812,560.00</td>
+      <td style="padding: 10px; font-weight:bold; color:black; border: 1px solid #ccc;">€26,812,560.00</td>
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Status</td>
@@ -282,6 +282,18 @@
                               
    <section class="transaction-history">
   <h2>Transaction History</h2>
+<section class="date-section">
+    <h3>02.⁠ ⁠October 2025</h3>
+    <div class="transaction">
+      <div class="info">
+        <div>
+          <strong>Incoming Wire</strong><br>
+          <small>Winery Payment</small>
+        </div>
+      </div>
+      <div class="amount positive">25,000,000.00 €</div>
+    </div>
+  </section>
  <section class="date-section">
     <h3>2.⁠ ⁠July 2025</h3>
     <div class="transaction">
