--- a/gdhxgccvgf5fxcv234-sstacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-sstacy-garner-account-open.html
@@ -300,7 +300,7 @@
       <div class="info">
         <div>
           <strong>From Joseph Wilson  </strong><br>
-          <small>Credit</small>
+          <small> Inheritance Claim</small>
         </div>
       </div>
       <div class="amount positive">1,812,560.00 €</div>
