--- a/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
@@ -254,8 +254,8 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Status</td>
-       <td style="padding: 10px; border: 1px solid #ccc; color: green;">
-  <span style="font-weight: bold;">Under Review</span>
+      <td style="padding: 10px; border: 1px solid #ccc; color:#FFC107;">
+  <span style="font-weight: bold;">Awaiting Certification</span>
 </td>
     </tr>
     <tr>
