--- a/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
+++ b/gdhxgccvgf5fxcv234-stacy-garner-account-open.html
@@ -282,6 +282,31 @@
                               
    <section class="transaction-history">
   <h2>Transaction History</h2>
+<section class="date-section">
+    <h3>10.⁠ ⁠October 2025</h3>
+    <div class="transaction">
+      <div class="info">
+        <div>
+          <strong>Incoming Wire</strong><br>
+          <small>Winery Payment</small>
+        </div>
+      </div>
+      <div class="amount positive">15,000,000.00 €</div>
+    </div>
+  </section>
+  <section class="date-section">
+    <h3>09.⁠ ⁠October 2025</h3>
+
+    <div class="transaction">
+      <div class="info">
+        <div>
+          <strong>Inheritance Tax</strong><br>
+          <small>Debit</small>
+        </div>
+      </div>
+      <div class="amount negative">-62,122.55 €</div>
+    </div>
+  </section>
   <section class="date-section">
     <h3>21. July 2025</h3>
 
