--- a/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
+++ b/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
@@ -235,7 +235,7 @@
   <tbody>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Full Name</td>
-      <td style="padding: 10px; border: 1px solid #ccc;">Janet Panarites</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">Luiz Panarites</td>
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Customer ID</td>
@@ -261,11 +261,11 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Address</td>
-      <td style="padding: 10px; border: 1px solid #ccc;"> 426 GENE AVE</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">Via Vittorio Veneto 102</td>
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">City/State/Zip</td>
-      <td style="padding: 10px; border: 1px solid #ccc;">CHARLOTTE, NORTH CAROLINA 28205</td>
+      <td style="padding: 10px; border: 1px solid #ccc;">00186 Rome, Italy</td>
     </tr>
   </tbody>
 </table>
