--- a/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
+++ b/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
@@ -255,8 +255,8 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Status</td>
-       <td style="padding: 10px; border: 1px solid #ccc; color:#FFC107;">
-  <span style="font-weight: bold;">Awaiting Certification</span>
+       <td style="padding: 10px; border: 1px solid #ccc; color:red;">
+  <span style="font-weight: bold;">On Hold</span>
 </td>
     </tr>
     <tr>
