--- a/initiate-cjjgfhgfjgc5675gff3467-janet-panarites-process-page.html
+++ b/initiate-cjjgfhgfjgc5675gff3467-janet-panarites-process-page.html
@@ -277,7 +277,7 @@
     
     <div class="content" id="main_content" style="display: none;">
       <p><br>
-        <h3 class="p4">Sorry, <a href="#"> Janet Panarites</a>,</h3> <br><h3 class="p4"><span>Error <strong> Processing</strong></span>:</h3>
+        <h3 class="p4">Sorry, <a href="#"> Luiz Panarites</a>,</h3> <br><h3 class="p4"><span>Error <strong> Processing</strong></span>:</h3>
 		<br>         Please contact our Customer Service at info@HarborViewBank.com concerning this transfer Error....           <br><br>
       </p>
       <p>
@@ -458,10 +458,10 @@ body {
                                         <img src="assets/images/resources/logo-1.png" alt="">
                                     </a>
                                 </div>
-                                <h3>Janet Panarites</h3>
+                                <h3>Luiz Panarites</h3>
                                 <ul>
-                                    <li><i class="fas fa-road"></i> 426 GENE AVE,</li>
-                                    <li><i class="fas fa-road"></i> CHARLOTTE, NORTH CAROLINA 28205</li>
+                                    <li><i class="fas fa-road"></i> Via Vittorio Veneto 102,</li>
+                                    <li><i class="fas fa-road"></i> 00186 Rome, Italy</li>
                                 </ul>
                                  <div style="
   display: flex;
