--- a/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
+++ b/gdhxgccvgf5fxcv234-janet-panarites-account-open.html
@@ -251,7 +251,7 @@
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Current Balance</td>
-      <td style="padding: 10px; font-weight:bold; color:black; border: 1px solid #ccc;">€25,825,342.9</td>
+      <td style="padding: 10px; font-weight:bold; color:black; border: 1px solid #ccc;">€825,342.9</td>
     </tr>
     <tr>
       <td style="padding: 10px; border: 1px solid #ccc;">Account Status</td>
@@ -283,6 +283,19 @@
                               
    <section class="transaction-history">
   <h2>Transaction History</h2>
+ <section class="date-section">
+    <h3>29.⁠ ⁠December 2025</h3>
+
+    <div class="transaction">
+      <div class="info">
+        <div>
+          <strong>Wire Reversal</strong><br>
+          <small>Winerypayment_revsl </small>
+        </div>
+      </div>
+      <div class="amount negative">-25,000,000.00 €</div>
+    </div>
+  </section>
 <section class="date-section">
     <h3>17.⁠ ⁠September 2025</h3>
     <div class="transaction">
